--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     ext.kotlin_version = '1.4.21'
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha03'
         // Do not upgrade until https://github.com/google/play-services-plugins/issues/163 is addressed
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'org.jacoco:org.jacoco.core:0.8.6'
